--- a/2-DOM/loading-sorting-in-memory/src/index.html
+++ b/2-DOM/loading-sorting-in-memory/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>2. DOM Loading Sorting</title>    
+    <title>2. DOM Loading Sorting in memory</title>    
   </head>
   <body>
     <table class="movies">
