--- a/2-DOM/hit-game/src/index.html
+++ b/2-DOM/hit-game/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hit Game</title>    
+    <title>2. DOM Hit Game</title>    
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
