--- a/3-events/tasks/src/index.html
+++ b/3-events/tasks/src/index.html
@@ -19,10 +19,14 @@
     </div>
 
     <h1>Pinned</h1>
-    <ul class="pinned-tasks-list"></ul>
+    <ul class="pinned-tasks-list">
+        <span>No pinned tasks</span>
+    </ul>
 
     <h1>All tasks</h1>
-    <ul class="all-tasks-list"> </ul>
+    <ul class="all-tasks-list">
+        <span>No tasks found</span> 
+    </ul>
   </div>
 </body>
 
