--- a/3-events/hit-game-finally/src/index.html
+++ b/3-events/hit-game-finally/src/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>3. Events. Hit Game 2</title>    
-    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
+  <div class="board">
+    <p class="messages"></p>
+  </div>
+  
   </body>
 </html>
