--- a/5-forms/trip-calendar/src/index.html
+++ b/5-forms/trip-calendar/src/index.html
@@ -5,24 +5,9 @@
     <title>5. Forms</title>
   </head>
   <body>
-
-    <form class="popover-toggle">
-      <button name="toggle" type="submit"> Click to toggle popover</button> 
-    </form> 
-
-    <div class="crm">
-      <h1>Товары<span class="create">+</span></h1>
-      <table class="products">
-        <thead>
-          <tr><th>Название</th><th>Стоимость</th><th>Действия</th></tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </div>
-
     <form class="trip-calendar">
       <label>Откуда</label><input type="text">
-      <label> &uarr;&uarr; &darr;&darr;
+      <label> &uarr;&uarr; &darr;&darr;</label>
       <label>Kуда:</label><input type="text">
       <label>Взрослые:</label><input type="number">
       <label>Дети:</label><input type="number">
@@ -32,7 +17,7 @@
       <label>Дата:</label><input name="outbound" type="date" required>
       <div class="hide hidden">
         <label for="inbound">Дата обратно:</label>
-        <input  name="inbound" type="date" required>
+        <input  name="inbound" type="date" >
       </div>
 
       <button name="buy" type="submit">Купить билет</button>     
