--- a/6-dnd/trello/src/index.html
+++ b/6-dnd/trello/src/index.html
@@ -10,18 +10,24 @@
 
 <body>
     <div class="trello">
-      <ul class="column">
-        <li class="title">To Do</li>
-        <li class="add">+ Add another card</li>
-      </ul>
-      <ul class="column">
-        <li class="title">In Progress</li>
-        <li class="add">+ Add another card</li>
-      </ul>
-      <ul class="column">
-        <li class="title">Done</li>
-        <li class="add">+ Add another card</li>
-      </ul>
+      <div class="column">
+        <h1 class="title">To Do</h1>
+        <ul class="cards">
+          <li class="add">+ Add another card</li>
+        </ul>
+      </div>
+      <div class="column">
+        <h1 class="title">In progress</h1>
+        <ul class="cards">
+          <li class="add">+ Add another card</li>
+        </ul>
+      </div>
+      <div class="column">
+        <h1 class="title">Done</h1>
+        <ul class="cards">
+          <li class="add">+ Add another card</li>
+        </ul>
+      </div>
     </div>
 
 </body>
